--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<router-outlet></router-outlet>
-<app-pie-chart></app-pie-chart>
-<app-line-chart></app-line-chart>
+<app-header />
+<router-outlet />
