--- a/src/app/pages/detail/detail/detail.component.html
+++ b/src/app/pages/detail/detail/detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Olympic games app</h1>
-  <h2>Dashboard</h2>
-  <app-pie-chart></app-pie-chart>
+  <h2>Détail</h2>
+  <app-line-chart></app-line-chart>
 </div>
