Piechart avec data + tooltip wip

--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -1,14 +1,11 @@
 <ngx-charts-pie-chart
+  [results]="single"
   [view]="view"
   [scheme]="colorScheme"
-  [results]="single"
   [gradient]="gradient"
   [legend]="showLegend"
-  [legendPosition]="legendPosition"
   [labels]="showLabels"
   [doughnut]="isDoughnut"
-  (select)="onSelect($event)"
-  (activate)="onActivate($event)"
-  (deactivate)="onDeactivate($event)"
->
+  [legendPosition]="legendPosition"
+  [tooltipText]="tooltipText">
 </ngx-charts-pie-chart>
