legend, css, responsive

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a routerLink= "" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> Dashboard</a>
-  <a routerLink= "detail" routerLinkActive="active"> Détail </a>
+  <a routerLink= ""> Dashboard</a>
+  <a routerLink= "detail"> Détail </a>
 </nav>
