--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  margin: 0;
+  margin: 0px;
   .container {
     display: flex;
     flex-direction: column;
@@ -8,5 +8,23 @@ body {
     justify-content: center;
     width: 100%;
     padding: 10px;
+    font-family: sans-serif;
+  }
+}
+h1{
+  color: white;
+  background-color: #00797c;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+.flex {
+  display: flex;
+  gap: 10px;
+}
+
+@media (max-width: 700px) {
+  .flex {
+    flex-direction: column;
   }
 }
