--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -5,6 +5,7 @@
   [gradient]="gradient"
   [legend]="showLegend"
   [labels]="showLabels"
+  (select)="onSelect($event)"
   [doughnut]="isDoughnut"
   [legendPosition]="legendPosition"
   [tooltipText]="tooltipText">
