--- a/src/app/pages/detail/detail/detail.component.html
+++ b/src/app/pages/detail/detail/detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Détail</h1>
+  <h1>{{title}}</h1>
   <div class="flex">
     <app-legend text="Number of entries" [data]= 50></app-legend>
     <app-legend text="Total number of medals" [data]=20></app-legend>
