Ajout line chart dynamique

--- a/src/app/pages/detail/detail/detail.component.html
+++ b/src/app/pages/detail/detail/detail.component.html
@@ -5,5 +5,6 @@
     <app-legend text="Total number of medals" [data]=20></app-legend>
     <app-legend text="Total number of athletes" [data]=20></app-legend>
   </div>
-  <app-line-chart></app-line-chart>
+  <app-line-chart [multi]="selectedData"></app-line-chart>
+
 </div>
