--- a/src/app/pages/detail/detail/detail.component.html
+++ b/src/app/pages/detail/detail/detail.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <h1>{{title}}</h1>
   <div class="flex">
-    <app-legend text="Number of entries" [data]= 50></app-legend>
-    <app-legend text="Total number of medals" [data]=20></app-legend>
-    <app-legend text="Total number of athletes" [data]=20></app-legend>
+    <app-legend text="Number of entries" [data]="numberOfParticipations"></app-legend>
+    <app-legend text="Total number of medals" [data]="numberOfMedals"></app-legend>
+    <app-legend text="Total number of athletes" [data]="numberOfAthletes"></app-legend>
   </div>
   <app-line-chart [multi]="selectedData"></app-line-chart>
 
