--- a/src/app/pages/detail/detail/detail.component.scss
+++ b/src/app/pages/detail/detail/detail.component.scss
@@ -1,3 +1,10 @@
 app-pie-chart {
   width: auto;
 }
+.noData{
+  h2, p{ 
+    color: #04838f;
+    font-family: "Montserrat", sans-serif !important;
+  }
+  text-align: center;
+}
